# KerasToCpp

./: CMakeLists.txt  README.md
core/: Convolution2D.cpp  MaxPooling.cpp  array4d.cpp
data/: final_model9.txt  full_bird_model.txt  model_data.txt
inc/: BaseDataUnit.h  BatchNormalization.h  Convolution2D.h  Matrix4D.h  MaxPooling.h  array4d.h  leakyReLu.h  matrix.h  read.h  readSpectrogram.h  sigmoid.h
src/: main.cpp
